# uv-rss-reader

./: README.md  pyproject.toml  rss.py
